fixed navbar on mobiles

--- a/website/public/css/css.css
+++ b/website/public/css/css.css
@@ -174,6 +174,19 @@ nav#header {
     margin-left: 8px;
 }
 
+/* Small devices (landscape phones, 576px and up) */
+@media (max-width: 576px) {
+
+    #header .navbar-search {
+        margin: 0;
+        width: 100%;
+    }
+
+    #header .buttons .btn {
+        margin: 0;
+    }
+  }
+
 /* modals */
 .facebook {
   background-color: #3b5998;
@@ -304,10 +317,9 @@ div.required label:after {
     color: #247BA0;
  }
 
+
 /* Small devices (landscape phones, 576px and up) */
  @media (max-width: 576px) { 
-    
-
     #profile #profile-header-card{
         text-align: center;
     }
